--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
             </ul>
           </div>
 
+          <div class="pt-4 px-8 inline-block">
+            <ul v-show="currentPage == 0" class="flex flex-row gap gap-x-8 text-sm text-black mx-2 px-4 py-2 rounded bg-indigo-200 opacity-50 w-auto">
+              <li>I'm working on a new site which will support Steam Workshop levels! <span class="font-bold">It's not ready yet</span>, but you can have a look <a class="underline hover:no-underline hover:text-indigo-900" href="https://rhythm.cafe">here</a>.</li>
+            </ul>
+          </div>
+
 
 
           <!-- CARDS DISPLAY -->
